Fix bug 1131738: Mark advisory reporter as safe.
Also remove transaction management from update
advisories command as it breaks things in dev
mode (sqlite) and isn't necessary for this.

--- a/bedrock/security/templates/security/advisory.html
+++ b/bedrock/security/templates/security/advisory.html
@@ -27,7 +27,7 @@
         {% endif %}
         {% if advisory.reporter %}
           <dt>Reporter</dt>
-          <dd>{{ advisory.reporter }}</dd>
+          <dd>{{ advisory.reporter|safe }}</dd>
         {% endif %}
         {% if 'risk' in advisory.extra_data %}
           <dt>Risk</dt>
