Fix Bug 882309, provide link to advisory when plugin is vulnerable

--- a/bedrock/mozorg/templates/mozorg/plugincheck.html
+++ b/bedrock/mozorg/templates/mozorg/plugincheck.html
@@ -66,6 +66,9 @@
   {# L10n: This is the string used to indicate that the plugin is vulnerable #}
   data-vulnerable="{{ _('vulnerable') }}"
 
+  {# L10n: This is the link text used to link to the advisory #}
+  data-vulnerable-link-txt="{{ _('Learn more') }}"
+
   {# L10n: This is the string used to prepend to DuckDuckGo searches for latest plugin #}
   data-ddg-searchq="{{ _('current version plugin') }}"
 
