--- a/media/css/plugincheck/plugincheck.less
+++ b/media/css/plugincheck/plugincheck.less
@@ -113,6 +113,10 @@ html[dir="rtl"] {
     .plugin-status-action {
         width:20%;
     }
+    .vulnerability-link-txt {
+        display: block;
+        padding: 10px 0;
+    }
 }
 .status-unknown {
     .plugin-status-detail {
