--- a/bedrock/security/templates/security/older-vulnerabilities.html
+++ b/bedrock/security/templates/security/older-vulnerabilities.html
@@ -715,7 +715,7 @@
       <td valign="top">60</td>
       <td valign="top">Networking<br>
       </td>
-      <td style="vertical-align: top;">1.5 1.4.2</td>
+      <td valign="top">1.5 1.4.2</td>
       <td valign="top">M1 to 1.4.1</td>
       <td valign="top">Reading passwords</td>
       <td valign="top">A malicious website could gain access to a user's
@@ -730,7 +730,7 @@
     <tr>
       <td>59</td>
       <td>JavaScript</td>
-      <td style="vertical-align: top;">firebird 0.7</td>
+      <td valign="top">firebird 0.7</td>
       <td>Firebird 0.6</td>
       <td>Run arbitrary code</td>
       <td>A website could gain chrome privileges by overriding the setter of a
@@ -743,7 +743,7 @@
     <tr>
       <td>58</td>
       <td>Mail</td>
-      <td style="vertical-align: top;">1.5</td>
+      <td valign="top">1.5</td>
       <td>M1 to 1.4</td>
       <td>Storing passwords on disk</td>
       <td>POP3 account passwords are saved to disk even when the user explicitly
@@ -756,7 +756,7 @@
     <tr>
       <td valign="top">57</td>
       <td valign="top">Cookies</td>
-      <td style="vertical-align: top;">1.5 1.4.1</td>
+      <td valign="top">1.5 1.4.1</td>
       <td valign="top">M1 to 1.4</td>
       <td valign="top">Read cookies set by another path</td>
       <td valign="top">By requesting a cookie with a path containing the escape
@@ -771,7 +771,7 @@
     <tr>
       <td valign="top">56</td>
       <td valign="top">JavaScript</td>
-      <td style="vertical-align: top;">1.4</td>
+      <td valign="top">1.4</td>
       <td valign="top">M1 to 1.3</td>
       <td valign="top">Determine whether a variable exists on a different domain</td>
       <td valign="top">Cross-domain variable detection is possible using scopes (eval,
@@ -785,7 +785,7 @@
     <tr>
       <td valign="top">55</td>
       <td valign="top">JavaScript</td>
-      <td style="vertical-align: top;">1.4</td>
+      <td valign="top">1.4</td>
       <td valign="top">M1 to 1.3</td>
       <td valign="top">Cross-domain scripting</td>
       <td valign="top">Executing custom setters or getters on a different domain is
@@ -800,7 +800,7 @@
     <tr>
       <td>54</td>
       <td>DOM</td>
-      <td style="vertical-align: top;">1.4</td>
+      <td valign="top">1.4</td>
       <td>M1 to 1.3</td>
       <td>Determine whether a URL was visited</td>
       <td>A website can use history.goURL to determine whether a URL was previously visited
@@ -812,7 +812,7 @@
     <tr>
       <td>53</td>
       <td>Cookies</td>
-      <td style="vertical-align: top;">1.3</td>
+      <td valign="top">1.3</td>
       <td>M1 to 1.2</td>
       <td>Read cookies set by another path</td>
       <td>Cookies set to path "abc" were able to be read by a page with path "abcd"</td>
