--- a/bedrock/security/templates/security/older-vulnerabilities.html
+++ b/bedrock/security/templates/security/older-vulnerabilities.html
@@ -700,37 +700,37 @@
       <td>61</td>
       <td>Running Executables</td>
       <td>1.5 1.4.2</td>
-      <td valign="top">M1 to 1.4.1</td>
-      <td valign="top">*.hta files could be executed on Windows</td>
-      <td valign="top">*.hta files were not treated as executable, and
+      <td>M1 to 1.4.1</td>
+      <td>*.hta files could be executed on Windows</td>
+      <td>*.hta files were not treated as executable, and
         could be used to gain full access to a user's system
       </td>
-      <td valign="top">
+      <td>
         <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=220257">220257</a>
       </td>
-      <td valign="top">Don't open *.hta or application/hta files</td>
-      <td valign="top"><em>2003-09-29</em></td>
+      <td>Don't open *.hta or application/hta files</td>
+      <td><em>2003-09-29</em></td>
     </tr>
     <tr>
-      <td valign="top">60</td>
-      <td valign="top">Networking<br>
+      <td>60</td>
+      <td>Networking<br>
       </td>
-      <td valign="top">1.5 1.4.2</td>
-      <td valign="top">M1 to 1.4.1</td>
-      <td valign="top">Reading passwords</td>
-      <td valign="top">A malicious website could gain access to a user's
+      <td>1.5 1.4.2</td>
+      <td>M1 to 1.4.1</td>
+      <td>Reading passwords</td>
+      <td>A malicious website could gain access to a user's
         authentication credentials to a proxy server.
       </td>
-      <td valign="top">
+      <td>
         <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=220122">220122</a>
       </td>
-      <td valign="top">None</td>
-      <td valign="top"><em>2003-09-24</em></td>
+      <td>None</td>
+      <td><em>2003-09-24</em></td>
     </tr>
     <tr>
       <td>59</td>
       <td>JavaScript</td>
-      <td valign="top">firebird 0.7</td>
+      <td>firebird 0.7</td>
       <td>Firebird 0.6</td>
       <td>Run arbitrary code</td>
       <td>A website could gain chrome privileges by overriding the setter of a
@@ -743,7 +743,7 @@
     <tr>
       <td>58</td>
       <td>Mail</td>
-      <td valign="top">1.5</td>
+      <td>1.5</td>
       <td>M1 to 1.4</td>
       <td>Storing passwords on disk</td>
       <td>POP3 account passwords are saved to disk even when the user explicitly
@@ -754,53 +754,53 @@
       <td>2003-08-28</td>
     </tr>
     <tr>
-      <td valign="top">57</td>
-      <td valign="top">Cookies</td>
-      <td valign="top">1.5 1.4.1</td>
-      <td valign="top">M1 to 1.4</td>
-      <td valign="top">Read cookies set by another path</td>
-      <td valign="top">By requesting a cookie with a path containing the escape
+      <td>57</td>
+      <td>Cookies</td>
+      <td>1.5 1.4.1</td>
+      <td>M1 to 1.4</td>
+      <td>Read cookies set by another path</td>
+      <td>By requesting a cookie with a path containing the escape
         sequence "%2E%2E", a malicious web site would be able to read cookies
         from different paths.
       </td>
-      <td valign="top">
+      <td>
         <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=213012">213012</a></td>
-      <td valign="top">Disable Cookies</td>
-      <td valign="top"><em>2003-07-28</em></td>
+      <td>Disable Cookies</td>
+      <td><em>2003-07-28</em></td>
     </tr>
     <tr>
-      <td valign="top">56</td>
-      <td valign="top">JavaScript</td>
-      <td valign="top">1.4</td>
-      <td valign="top">M1 to 1.3</td>
-      <td valign="top">Determine whether a variable exists on a different domain</td>
-      <td valign="top">Cross-domain variable detection is possible using scopes (eval,
+      <td>56</td>
+      <td>JavaScript</td>
+      <td>1.4</td>
+      <td>M1 to 1.3</td>
+      <td>Determine whether a variable exists on a different domain</td>
+      <td>Cross-domain variable detection is possible using scopes (eval,
         with)
       </td>
-      <td valign="top">
+      <td>
         <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=158049">158049</a></td>
       <td>Disable JavaScript</td>
       <td><em>2003-06-02</em></td>
     </tr>
     <tr>
-      <td valign="top">55</td>
-      <td valign="top">JavaScript</td>
-      <td valign="top">1.4</td>
-      <td valign="top">M1 to 1.3</td>
-      <td valign="top">Cross-domain scripting</td>
-      <td valign="top">Executing custom setters or getters on a different domain is
+      <td>55</td>
+      <td>JavaScript</td>
+      <td>1.4</td>
+      <td>M1 to 1.3</td>
+      <td>Cross-domain scripting</td>
+      <td>Executing custom setters or getters on a different domain is
         possible.
       </td>
-      <td valign="top">
+      <td>
         <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=92773">92773</a>
       </td>
-      <td valign="top">Disable JavaScript</td>
-      <td valign="top"><em>2003-03-06</em></td>
+      <td>Disable JavaScript</td>
+      <td><em>2003-03-06</em></td>
     </tr>
     <tr>
       <td>54</td>
       <td>DOM</td>
-      <td valign="top">1.4</td>
+      <td>1.4</td>
       <td>M1 to 1.3</td>
       <td>Determine whether a URL was visited</td>
       <td>A website can use history.goURL to determine whether a URL was previously visited
@@ -812,7 +812,7 @@
     <tr>
       <td>53</td>
       <td>Cookies</td>
-      <td valign="top">1.3</td>
+      <td>1.3</td>
       <td>M1 to 1.2</td>
       <td>Read cookies set by another path</td>
       <td>Cookies set to path "abc" were able to be read by a page with path "abcd"</td>
